@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan 14 18:49:36 2002 -->
+<!-- Mon Jan 14 18:56:37 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -141,6 +141,9 @@ assistance on the appropriate TMDA mailing list.<br><br>
 <ul>
 <li>Read the <a href="faq.html">FAQ</a> to make sure your question
 has not already been answered.<br>
+
+<li>Unless you are installing TMDA for the first time, make sure you
+are caught up with the <b>UPGRADE</b> file which comes with the distribution.<br>
 
 <li>For delivery problems, check your LOGFILE_DEBUG file for errors, or 
 if that isn't defined, look in ~/TMDA_DELIVERY_FAILURE.<br>
