@@ -1,3 +1,7 @@
+2002-01-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* trouble.ht (Links): Recommend reading UPGRADE.
+
 2002-01-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-filter.ht (Links): Update python-cdb module link.
